.kube/db/postgres-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: postgres-ingress
  annotations:
    traefik.ingress.k8s.io/router.entrypoints: web
spec:
  rules:
    - host: postgres.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: postgres-service
                port:
                  number: 5432
